...
                android:layout_height="wrap_content"
                android:text="Change Photo" />

        </LinearLayout>

        <TextView
            android:id="@+id/nameField"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="Name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/toolbar3"
            app:layout_constraintTop_toTopOf="@+id/toolbar3" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="Your Name"
            android:padding="5dp" />

        <TextView
            android:id="@+id/emailField"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="Email"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/toolbar3"
            app:layout_constraintTop_toTopOf="@+id/toolbar3" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="your.email@example.com" />

        <TextView
            android:id="@+id/phoneField"
...
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="(123) 456-7890"
            android:paddingBottom="10dp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#34C759"
            android:padding="10dp"
            android:text="Save Changes"
            android:textColor="@color/white" />


    </LinearLayout>
    <include
        android:id="@+id/bottomNavigationViewEntrant"
        layout="@layout/entrant_bottom_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/toolbar4"
        app:layout_constraintBottom_toBottomOf="@id/toolbar4"
        app:layout_constraintStart_toStartOf="parent"
...
