...
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Receive Notifications" />

        <Button
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="#34C759"
            android:text="Edit Profile" />

        <Button
...
